# MCP

./: claude-mcp-client-config.yml  mcp-client.py  pyproject.toml
servers/: shell_server.py  weather_server.py
