[project]
name = "shellserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.65",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "mcp[cli]>=1.9.1",
]
